"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2011-09-06	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-92-prsim-multi-error-handling-01:
	  hacprsim: replaced exception mechanism with a simpler, cleaner
		aggregation of exception objects, to be able to handle
		multiple exceptions on a single-event.
		Fatal exceptions now print out the last event in watchall
		logs, test cases updated (all expect-fail).
		New command: 'exceptions' to print recent exceptions, 
			but currently not saved in checkpoints yet.  


2011-08-29	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-92:
	  haco: improve compiler diagnostic on "identifier already declared"
		Added test cae.


2011-08-23	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-91:
	  Merged prsim-precharge-check branch.


2011-08-20	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-85-prsim-precharge-check-16:
	  current-path-graph.cc: account for non-restoring FETs direction
		when generating graph, ExprAlloc will then generate
		expressions correctly.
	  Expect-fail test cases added with wrong precharges.


	* HACKT-00-01-04-main-00-84-85-prsim-precharge-check-15:
	  hacknet: auto-flag non-restoring transistors with 
		IS_NON_RESTORING attribute.  non-restoring FETs
		are currently only allowed in precharge circuits.
		Output attribute printed as :pchgnr (easy to grep for).
		This will be needed for handling non-restoring precharges
		in invariant expressions for hacprsim.
		Test cases updated.


2011-08-19	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-85-prsim-precharge-check-14:
	  rebase master (-main-00-84-90)
	  Brought in fix for ACX-PR-2315 which was needed for pcehb- and
		pcefb- test cases with simple precharge invariants.

