@@ -5,6 +5,16 @@
 
 2011-09-06	David Fang		<fangism@users.sourceforge.net>
 
+	* HACKT-00-01-04-main-00-84-94:
+	  hacknet: new mangle option mangle_double_quote, self-explanatory.
+
+
+	* HACKT-00-01-04-main-00-84-93-merged-prsim-multi-error-handling-01:
+	  Just merge previous mini branch.
+
+
+2011-09-06	David Fang		<fangism@users.sourceforge.net>
+
 	* HACKT-00-01-04-main-00-84-92-prsim-multi-error-handling-01:
 	  hacprsim: replaced exception mechanism with a simpler, cleaner
 		aggregation of exception objects, to be able to handle
